@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EvaluateTests.cs" />
+    <Compile Include="Language\BaseBehaviorTests.cs" />
     <Compile Include="Language\BaseObjectTests.cs" />
     <Compile Include="Language\BasicClassTests.cs" />
     <Compile Include="Language\BlockTests.cs" />
