@@ -22,7 +22,7 @@ namespace AjTalk.Tests.Language
             Assert.IsNotNull(mth);
             Assert.AreEqual("method1", mth.Name);
             Assert.AreEqual(cls, mth.Class);
-            Assert.AreEqual("TestClass", mth.Class.Name);
+            Assert.AreEqual("TestClass", ((IClass) mth.Class).Name);
         }
 
         [TestMethod]
