@@ -265,6 +265,50 @@ namespace AjTalk.Tests
         }
 
         [TestMethod]
+        [DeploymentItem(@"CodeFiles\Library1.st")]
+        public void ReviewClassGraph()
+        {
+            Loader loader = new Loader(@"Library1.st");
+
+            Machine machine = CreateMachine();
+
+            loader.LoadAndExecute(machine);
+
+            IBehavior objclass = (IBehavior) machine.GetGlobalObject("Object");
+            Assert.IsNotNull(objclass);
+            Assert.IsNotNull(objclass.Behavior);
+            Assert.IsNotNull(objclass.MetaClass);
+            Assert.IsNotNull(objclass.SuperClass);
+
+            IBehavior behclass = (IBehavior)machine.GetGlobalObject("Behavior");
+            Assert.IsNotNull(behclass);
+            Assert.IsNotNull(behclass.Behavior);
+            Assert.IsNotNull(behclass.MetaClass);
+            Assert.IsNotNull(behclass.SuperClass);
+
+            Assert.AreEqual(objclass, behclass.SuperClass);
+            Assert.AreEqual(objclass.MetaClass, behclass.MetaClass.SuperClass);
+
+            IClassDescription classdes = (IClassDescription)machine.GetGlobalObject("ClassDescription");
+            Assert.IsNotNull(classdes);
+            Assert.IsNotNull(classdes.Behavior);
+            Assert.IsNotNull(classdes.MetaClass);
+            Assert.IsNotNull(classdes.SuperClass);
+
+            Assert.AreEqual(behclass, classdes.SuperClass);
+            Assert.AreEqual(behclass.MetaClass, classdes.MetaClass.SuperClass);
+
+            IClass clazz = (IClass)machine.GetGlobalObject("Class");
+            Assert.IsNotNull(clazz);
+            Assert.IsNotNull(clazz.Behavior);
+            Assert.IsNotNull(clazz.MetaClass);
+            Assert.IsNotNull(clazz.SuperClass);
+
+            Assert.AreEqual(classdes, clazz.SuperClass);
+            Assert.AreEqual(classdes.MetaClass, clazz.MetaClass.SuperClass);
+        }
+
+        [TestMethod]
         [DeploymentItem(@"CodeFiles\NativeBehavior.st")]
         public void LoadNativeBehavior()
         {
@@ -296,6 +340,8 @@ namespace AjTalk.Tests
             Assert.IsInstanceOfType(nil, typeof(IClass));
 
             ((IClass)nil).DefineInstanceMethod(new DoesNotUnderstandMethod(machine));
+            ((IClass)nil).DefineClassMethod(new DoesNotUnderstandMethod(machine));
+
             return machine;
         }
     }
