@@ -1,0 +1,10 @@
+﻿namespace AjTalk.Language
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Text;
+
+    public interface IMetaClass : IClassDescription
+    {
+    }
+}
