@@ -82,6 +82,9 @@ bytecode .Send manage native object or IObject
 2010-08-12
 subclass:nativeType: support in test, DoesNotUnderstand
 new example NativeBahevior.st
+IMetaClass
+BaseMetaClass
+BaseBehaviorTests
 
 Angel "Java" Lopez
 http://www.ajlopez.com/en
